finish show mobile detail data from mobile list

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="mock_mobile_name">Moto E4 Plus</string>
     <string name="alert_title_error">Error</string>
     <string name="alert_message_cannot_connect_to_server">Cannot connect to server.</string>
+    <string name="mock_mobile_brand">Samsung</string>
 </resources>
